--- a/templates/qrcode/email__template.html
+++ b/templates/qrcode/email__template.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>email template</title>
 	<style type="text/css">
-		
+
 		/* *{
 			box-sizing: border-box;
 		} */
@@ -58,9 +58,9 @@
 			padding: 40px 0;
 		}
 
-		@media screen and (max-width: 600px) { 
+		@media screen and (max-width: 600px) {
 		}
-		@media screen and (max-width: 400px) { 
+		@media screen and (max-width: 400px) {
 		}
 	</style>
 </head>
@@ -87,17 +87,22 @@
 									<img src="/media/{{ qr_code.qr_code }}" alt="..." height="240"  class="img-thumbnail mb-2">
 								</center>
 							</td>
-							
+
 						</tr>
 						<tr>
 							<td>
-								<p style="line-height: 20px;">
-									Embeded Code: 
+								<!--<p style="line-height: 20px;">-->
+								<h4>Embeded Code</h4>
+
+								    <code style="line-height: 20px;">
+
 									< iframe src="{{ qr_code.url }}" title="Survey" data-survey-id="{{ qr_code.pk }}" width="350" height="100%"> </iframe>
-								</p>
+								<!--</p>-->
+								</code>
+
 							</td>
 						</tr>
-						
+
 					</table>
 				</td>
 			</tr>
@@ -124,8 +129,8 @@
 											<table class="content">
 												<tr>
 													<td>
-														
-														
+
+
 													</td>
 												</tr>
 											</table>
@@ -148,11 +153,11 @@
 
 									We are excited to welcome you to Dowell and are even more excited about what we have planned. You are well on your way to creating beautiful visual products.
 								</p>
-									
+
 									<p><b>Preview of the survey invitation in uxlivinglab page</b></p>
-									
+
 									<p>Whether you're here for your brand, a cause, or just for fun, welcome back! If there is anything you need, we will be here every step of the way.</p>
-									
+
 									<p>
 										Thank you, <br>
 									Dowell
@@ -168,8 +173,8 @@
 								<table width="100%" style="margin: 20px 0 ;">
 									<tr>
 										<td style="text-align:center ;">
-											<p>Sent by Govinda’s <a href="">check our blog  @yourbrandapp</a></p>
-											<p>44 De Haro Street, Suite 199, San Francisco, CA 94108</a></p>
+											<p>Sent by Dowell Feedback <a href="#"></a></p>
+											<!--<p>44 De Haro Street, Suite 199, San Francisco, CA 94108</a></p>-->
 										</td>
 									</tr>
 								</table>
