added the saving function for the selected services from dowell

--- a/templates/qrcode/feedback.html
+++ b/templates/qrcode/feedback.html
@@ -1020,7 +1020,7 @@
         const checkbox = document.createElement("input");
         checkbox.type = "checkbox";
         checkbox.name = "selectedProducts";
-        checkbox.value = product.id;
+        checkbox.value = product.product_name;
         
 
         const checkmark = document.createElement("span");
