--- a/templates/qrcode/feedback.html
+++ b/templates/qrcode/feedback.html
@@ -16,7 +16,7 @@
     <style>
       /* css for multiselect */
       .countries__toggler,
-      .regions__toggler {
+      .regions__toggler, .products__toggler {
         display: flex;
         justify-content: space-between;
         font-size: 0.95rem;
@@ -26,11 +26,11 @@
         color: gray;
         cursor: pointer;
       }
-      .countries__toggler span i,
+      .countries__toggler span i,.products__toggler span i,
       .regions__toggler span i {
         color: hsla(102, 63%, 60%, 1);
       }
-      .country__search,
+      .country__search, .product_search
       .region__search {
         width: 100%;
         height: 1rem;
@@ -41,7 +41,9 @@
       .hide {
         display: none;
       }
-      .countries__label,
+
+      
+      .countries__label, .products__label,
       .regions__label {
         display: flex;
         flex-direction: column;
@@ -50,11 +52,11 @@
         overflow-y: scroll;
       }
       /* tags styling */
-      .country__tags__container,
+      .country__tags__container, .product__tags__container,
       .region__tags__container {
         max-width: 400px;
       }
-      .country__tag,
+      .country__tag, .product__tag,
       .region__tag {
         min-width: 130px;
         padding: 0.3rem;
@@ -68,7 +70,7 @@
         margin: 5px;
       }
 
-      .country__tag span,
+      .country__tag span, .product__tag span,
       .region__tag span {
         cursor: pointer;
         margin-left: 1.5rem;
@@ -271,15 +273,9 @@
       }
       .upload__image__cover img {
         border-radius: 50%;
-<<<<<<< HEAD
-        /*width: 100px;*/
-        max-height: 80px;
-        max-width: 80px;
-=======
         max-width: 100px;
         max-height: 100px;
         cursor: pointer;
->>>>>>> 650e282dc5399bf368859f94b78590260620c601
       }
       .upload__image__cover input[type="file"] {
         background-color: blueviolet;
@@ -468,22 +464,18 @@
                 />
               </div>
               <div class="form_control">
-                <!-- <input
-                  type="text"
-                  placeholder="enter your product/service"
-                  id="service"
-                  name="service"
-                  required
-                /> -->
-
+                <!-- ========= -->
                 <p id="search" class="products__toggler btn">
-                  Select your product/service
+                  Select products/services
                   <span> <i class="fa fa-arrow-circle-down"></i></span>
                 </p>
                 <div class="products__container">
                   <div class="products__tags__container"></div>
                   <div id="productList" class="products__label"></div>
                 </div>
+                <!-- ================== -->
+
+        
               </div>
               <div class="form_control">
                 <input
@@ -762,7 +754,8 @@
         );
         countriesDataContainer.innerHTML = "<p>Loading countries ...</p>";
         const apiCountriesURL =
-          "https://100074.pythonanywhere.com/countries/{{ user.username }}/{{ session_id }}/100014/";
+          // "https://100074.pythonanywhere.com/countries/{{ user.username }}/{{ session_id }}/100014/";
+          "https://100074.pythonanywhere.com/countries/{{ user.username }}/6x5wqdl75wv2mxkv24qd4otpiubk2b4g/100014/";
 
         fetch(apiCountriesURL, {
           method: "GET",
@@ -828,7 +821,8 @@
         let regionsTagContainer = document.querySelector(
           ".region__tags__container"
         );
-        const regionUrl = `https://100074.pythonanywhere.com/region/name/${country}/{{ user.username }}/{{ session_id }}/100014/`;
+        // const regionUrl = `https://100074.pythonanywhere.com/region/name/${country}/{{ user.username }}/{{ session_id }}/100014/`;
+        const regionUrl = `https://100074.pythonanywhere.com/region/name/${country}/{{ user.username }}/6x5wqdl75wv2mxkv24qd4otpiubk2b4g/100014/`;
 
         fetch(regionUrl, {
           method: "GET",
@@ -885,6 +879,7 @@
           })
           .catch((error) => console.error(error));
       }
+
     </script>
     <!-- <script>
       // Fetch Api for countries
@@ -980,11 +975,10 @@
           .catch((error) => console.error(error));
       });
     </script> -->
+  
 
 
-
-    <!-- loading the dowells products/services from the api -->
-
+    <!--  -->
     <script>
       const productList = document.getElementById("productList");
       const searchInput = document.getElementById("search");
@@ -1019,7 +1013,7 @@
         
         const checkbox = document.createElement("input");
         checkbox.type = "checkbox";
-        checkbox.name = "selectedProducts";
+        checkbox.name = "service";
         checkbox.value = product.product_name;
         
 
